@@ -35,7 +35,7 @@ my %combo_default;
 my @dialogs = Fuse::Dialog::read( shift @ARGV );
 
 print Fuse::GPL( 'options.c: options dialog boxes',
-		 '2001-2007 Philip Kendall, Marek Januszewski, Stuart Brady' ) . << "CODE";
+		 '2001-2009 Philip Kendall, Marek Januszewski, Stuart Brady' ) . << "CODE";
 
 /* This file is autogenerated from options.dat by options.pl.
    Do not edit unless you know what you\'re doing! */
@@ -53,18 +53,91 @@ print Fuse::GPL( 'options.c: options dialog boxes',
 #include "settings.h"
 #include "win32internals.h"
 
+static int
+option_enumerate_combo( char **options, char *value, int count, int def ) {
+  int i;
+  if( value != NULL ) {
+    for( i = 0; i < count; i++) {
+      if( !strcmp( value, options[ i ] ) )
+        return i;
+    }
+  }
+  return def;
+}
+
 CODE
 
 foreach( @dialogs ) {
+
+    foreach my $widget ( @{ $_->{widgets} } ) {
+
+	foreach my $type ( $widget->{type} ) {
+
+	    my $text = $widget->{text}; $text =~ tr/()//d;
+
+	    if( $type eq "Combo" ) {
+		my $n = 0;
+
+		foreach( split( /\|/, $widget->{data1} ) ) {
+		    if( /^\*/ ) {
+			$combo_default{$widget->{value}} = $n;
+		    }
+		    $n++;
+		}
+		$n = 0;
+		$widget->{data1} =~ s/^\*//;
+		$widget->{data1} =~ s/\|\*/|/;
+		if( not exists( $combo_sets{$widget->{data1}} ) ) {
+		    $combo_sets{$widget->{data1}} = "$_->{name}_$widget->{value}_combo";
+
+		    print << "CODE";
+
+static char * $_->{name}_$widget->{value}_combo[] = {
+CODE
+		    foreach( split( /\|/, $widget->{data1} ) ) {
+			print << "CODE";
+  "$_",
+CODE
+			$n++;
+		    }
+		    print << "CODE";
+};
+
+static const int $_->{name}_$widget->{value}_combo_count = $n;
+
+CODE
+		} else {
+		    print << "CODE";
+\#define $_->{name}_$widget->{value}_combo $combo_sets{$widget->{data1}}
+\#define $_->{name}_$widget->{value}_combo_count $combo_sets{$widget->{data1}}_count
+
+CODE
+		}
+		print << "CODE";
+int
+option_enumerate_$_->{name}_$widget->{value}() {
+  return option_enumerate_combo( $_->{name}_$widget->{value}_combo,
+				 settings_current.$widget->{value},
+				 $_->{name}_$widget->{value}_combo_count,
+				 $combo_default{$widget->{value}} );
+}
+
+CODE
+	    }
+	}
+    }
+
     my $idcname = uc( "IDC_OPT_$_->{name}" );
     my $optname = uc( "OPT_$_->{name}" );
 
 print << "CODE";
-
 static BOOL CALLBACK
 menu_options_$_->{name}_proc( HWND hwndDlg, UINT msg, WPARAM wParam, LPARAM lParam )
 {
   char buffer[80];
+  int i;
+  
+  i = 0;
   buffer[0] = '\\0';		/* Shut gcc up */
   
   switch( msg )
@@ -97,7 +170,29 @@ CODE
       SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, WM_SETTEXT,
         0, (LPARAM) buffer );
 CODE
-	}
+	} elsif( $type eq "Combo" ) {
+          my $idcname = uc( "$widget->{value}" );
+          print << "CODE";
+      for( i = 0; i < $_->{name}_$widget->{value}_combo_count; i++ ) {
+        /* FIXME This is asuming SendDlgItemMessage is not UNICODE */
+        SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, CB_ADDSTRING,
+          0, (LPARAM) $_->{name}_$widget->{value}_combo[i] );
+      }
+      SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, CB_SETCURSEL,
+        (LPARAM) $combo_default{$widget->{value}}, 0 );
+      if( settings_current.$widget->{value} != NULL ) {
+        for( i = 0; i < $_->{name}_$widget->{value}_combo_count; i++ ) {
+          if( !strcmp( settings_current.$widget->{value},
+                       $_->{name}_$widget->{value}_combo[i] ) ) {
+            SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname},
+              CB_SETCURSEL, i, 0 );
+          }
+        }
+      }
+CODE
+	} else {
+          die "Unknown type `$type'";
+        }
     }
 
 print << "CODE";
@@ -130,7 +225,18 @@ CODE
         80, (LPARAM) buffer );
       settings_current.$widget->{value} = atoi( buffer );  
 CODE
-	}
+	} elsif( $widget->{type} eq "Combo" ) {
+	    my $idcname = uc( "$widget->{value}" );
+	    print << "CODE";
+      free( settings_current.$widget->{value} );
+      settings_current.$widget->{value} =
+        strdup( $_->{name}_$widget->{value}_combo[
+        SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname},
+          CB_GETCURSEL, 0, 0 ) ] );
+CODE
+        } else {
+          die "Unknown type `$widget->{type}'";
+        }
     }
 
     print "          $_->{posthook}();\n\n" if $_->{posthook};
@@ -169,54 +275,6 @@ menu_options_$_->{name}( int action )
 
 CODE
 }
-
-foreach( @dialogs ) {
-    foreach my $widget ( @{ $_->{widgets} } ) {
-	if( $widget->{type} eq "Combo" ) {
-	    my $n = 0;
-
-	    foreach( split /\|/, $widget->{data1} ) {
-		if( s/^\*// ) {
-		    $combo_default{$widget->{value}} = $n;
-		}
-		$n++;
-	    }
-	    $widget->{data1} =~ s/^\*//;
-	    $widget->{data1} =~ s/\|\*/|/;
-	    if( not exists( $combo_sets{$widget->{data1}} ) ) {
-		$combo_sets{$widget->{data1}} = "widget_$widget->{value}_combo";
-
-		print << "CODE";
-static const char *widget_$widget->{value}_combo[] = {
-CODE
-		foreach( split /\|/, $widget->{data1} ) {
-		    print << "CODE";
-  "$_",
-CODE
-		}
-		print << "CODE";
-  NULL
-};
-
-CODE
-	    } else {
-		print << "CODE";
-\#define widget_$widget->{value}_combo $combo_sets{$widget->{data1}}
-
-CODE
-	    }
-		print << "CODE";
-int
-option_enumerate_$_->{name}_$widget->{value}() {
-  return 0;
-}
-
-CODE
-	}
-    }
-}
-
-
 
     print << "CODE";
 
